<resources>
    <string name="app_name">iMbCloudLive</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="switch_video">切换</string>
    <string name="play_video">播出</string>
    <string name="pre_view">预览画面</string>
    <string name="clickToAddAndLongClickToEdit">轻点添加,长按编辑</string>
    <string name="clickToAdd">点击添加</string>
    <string name="integerValueOne">1</string>
    <string name="deviceNotSupport">受限于您的设备性能，无法使用更多视频源</string>
    <string name="newSth">新建</string>
    <string name="clickToInput">添加输入</string>
    <string name="clickToAddInputStreaming">点击添加输入源:0</string>
    <string name="rtmpAddressExample">      rtmp://example.com/appName</string>
    <string name="streamName">     streamName</string>
    <string name="cancel">取消</string>
    <string name="rename">重命名</string>
    <string name="rtmpDescribe">RTMP 串流码</string>
    <string name="rtmpServerAddress">RTMP 流服务器地址</string>
    <string name="rtmpPullNameHint">新 RTMP 拉流地址</string>
    <string name="inputManager">输入管理</string>
    <string name="zeroPercent">0%</string>
    <string name="hundredPercent">100%</string>
    <string name="remove">移除</string>
    <string name="mute">静音</string>
    <string name="voice">音量</string>
    <string name="playing">播出</string>
    <string name="previewing">预监</string>
    <string name="videoFromZero">视频源 0</string>
</resources>
