<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    android:background="#000">

    <com.tencent.rtmp.ui.TXCloudVideoView
        android:background="#000"
        android:id="@+id/txVideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvAddViewNums"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/drawable_blue_bg_circle_shape"
        android:gravity="center_horizontal"
        android:text="@string/integerValueOne"
        android:textColor="#fff"
        android:textSize="12sp" />

    <TextView
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:background="@drawable/drawable_green_bg_rectangle"
        android:textSize="10sp"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@id/tvAddViewNums"
        android:textColor="@color/white"
        android:text="@string/previewing"
        android:layout_width="30dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:background="@drawable/drawable_orange_bg_rectangle"
        android:textSize="10sp"
        android:layout_marginStart="36dp"
        android:layout_toEndOf="@id/tvAddViewNums"
        android:textColor="@color/white"
        android:text="@string/playing"
        android:layout_width="30dp"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/tvAddViewClickToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@mipmap/goback"
        android:text="@string/clickToAdd"
        android:textColor="#0af"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvAddViewClickToAddGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/clickToAdd"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"

        />

    <TextView
        android:id="@+id/tvAddViewDeviceNotSupport"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddViewClickToAddGray"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/deviceNotSupport"
        android:textColor="@color/white"
        android:visibility="gone" />
</RelativeLayout>