<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@drawable/drawable_dialog_input_manager"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvInputManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:text="@string/inputManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/videoFromZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputManager"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/drawable_green_bg_rectangle"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="10sp"
        android:text="@string/previewing"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tvInputManager"
         />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/drawable_orange_bg_rectangle"
        android:gravity="center"
        android:text="@string/playing"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvInputManager"

        />

    <TextView
        android:textSize="16sp"
        android:textColor="#000"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/voice"
        />

    <RelativeLayout
        android:id="@+id/rlVoiceProgress"
        android:background="@drawable/drawable_gray_bg_rectangel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCurProgress"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/hundredPercent"
            android:layout_centerVertical="true"
            android:layout_width="45dp"
            android:layout_height="wrap_content" />

        <SeekBar
            android:background="@null"
            android:id="@+id/seekBarDialogStreamInputManager"
            style="@style/LibraryVideoMediaControllerSeekBar"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tvCurProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/tvCurProgress"
            android:layout_below="@id/seekBarDialogStreamInputManager"
            android:text="@string/zeroPercent"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:layout_alignEnd="@id/seekBarDialogStreamInputManager"
            android:layout_below="@id/seekBarDialogStreamInputManager"
            tools:text="100%"
            android:text="@string/hundredPercent"
            android:layout_marginEnd="8dp"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llTwoButtons"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlVoiceProgress">

        <TextView
            android:id="@+id/tvRemove"
            android:layout_marginStart="8dp"
            android:background="@drawable/stroke_orange"
            android:textSize="16sp"
            android:layout_marginEnd="4dp"
            android:text="@string/remove"
            android:textColor="#DB6958"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tvMute"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/stroke_blue"
            android:textSize="16sp"
            android:textColor="@color/deepBlue"
            android:text="@string/mute"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp" />

    </LinearLayout>

    <View
        app:layout_constraintTop_toBottomOf="@id/llTwoButtons"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

</android.support.constraint.ConstraintLayout>