<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@drawable/drawable_dialog_edit_stream">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/ivHelp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:inputType="text"
        android:id="@+id/etRtmpName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="start|center_vertical"
        android:hint="@string/rtmpPullNameHint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRtmpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/rtmpServerAddress"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llRtmpServerAddress"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/et_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRtmpAddress">

        <EditText
            android:id="@+id/etRtmpServerAddress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/littleGray"

            android:gravity="start|center_vertical"
            android:hint="@string/rtmpAddressExample"
            android:inputType="text"
            android:textSize="12sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvRtmpDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rtmpDescribe"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRtmpServerAddress" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:id="@+id/llRtmpStreamDescribe"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/et_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRtmpDescribe">

        <EditText
            android:id="@+id/etStreamDescribe"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/littleGray"
            android:gravity="start|center_vertical"
            android:hint="@string/streamName"
            android:inputType="text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRtmpDescribe" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_three_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRtmpStreamDescribe">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_orange"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#DB6958"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvRename"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_blue"
            android:gravity="center"
            android:text="@string/rename"
            android:textColor="@color/deepBlue"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvNewSth"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_deep_blue_rectangle"
            android:gravity="center"
            android:text="@string/newSth"
            android:textColor="#fff"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_three_buttons" />

</android.support.constraint.ConstraintLayout>